# SmartNearestNeighbors

BSPNeighbors/: BSPNeighbors.cpp  BSPNeighbors.h  CMakeLists.txt  Demo.cpp  Demo2D.cpp  Demo3D.cpp  Example.cpp
BSPNeighbors/data/: bspNeighbors.vtp  kNearest.vtp
VTKJournal/: InsightJournal.bib  SmartNearestNeighbors.out  SmartNearestNeighbors.tex  SmartNearestNeighbors.tex.backup
VTKJournal/images/: HalfSpace.odg  VoronoiNeighbors1.odg
VoronoiNeighbors/: CMakeLists.txt  Demo.cpp  Example.cpp  VoronoiNeighbors.cpp  VoronoiNeighbors.h  legacy.cpp
VoronoiNeighbors/data/: points.vtp
