cmake_minimum_required(VERSION 2.6)

PROJECT(BSPNeighbors)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

ADD_EXECUTABLE(BSPNeighborsExample Example.cpp BSPNeighbors.cpp)
TARGET_LINK_LIBRARIES(BSPNeighborsExample ${ITK_LIBRARIES} ${VTK_LIBRARIES})

ADD_EXECUTABLE(BSPNeighborsDemo Demo.cpp BSPNeighbors.cpp)
TARGET_LINK_LIBRARIES(BSPNeighborsDemo ${ITK_LIBRARIES} ${VTK_LIBRARIES})
