cmake_minimum_required(VERSION 2.6)

PROJECT(BSPNeighbors)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

ADD_EXECUTABLE(BSPNeighborsExample Example.cpp BSPNeighbors.cpp)
TARGET_LINK_LIBRARIES(BSPNeighborsExample ${ITK_LIBRARIES} ${VTK_LIBRARIES})

ADD_EXECUTABLE(BSPNeighborsDemo2D Demo2D.cpp BSPNeighbors.cpp)
TARGET_LINK_LIBRARIES(BSPNeighborsDemo2D ${ITK_LIBRARIES} ${VTK_LIBRARIES})

ADD_EXECUTABLE(BSPNeighborsDemo3D Demo3D.cpp BSPNeighbors.cpp)
TARGET_LINK_LIBRARIES(BSPNeighborsDemo3D ${ITK_LIBRARIES} ${VTK_LIBRARIES})
